--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,3 +1,10 @@
+ <div class="row">
+ <div class="col-xs-12">
+ <div class="col-sm-offset-2 col-sm-8">
+   <div class="col-md-offset-2 col-md-8">
+　<div class="col-lg-offset-3 col-lg-6">
+  
+
 <%= form_for(task) do |f| %>
   <% if task.errors.any? %>
     <div id="error_explanation">
@@ -8,13 +15,23 @@
       </ul>
     </div>
   <% end %>
-
+  
+  <div class="form-group">
   <%= f.label :status, 'ステータス' %>
-  <%= f.text_field :status %>
-
+  <%= f.text_field :status, class: 'form-control' %>
+  </div>
+  
+  <div class="form-group">
   <%= f.label :content, 'タスク' %>
-  <%= f.text_field :content %>
+  <%= f.text_field :content, class: 'form-control' %>
+  </div>
+  
 
-  <%= f.submit '投稿' %>
+  <%= f.submit '投稿', class: 'btn btn-primary' %>
   
 <% end %>
+</div>
+</div>
+</div>
+</div>
+</div>
